force-app/main/default/objects/Vehicle__c/fields/Email_sent_to_supplier__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_to_supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track emails to supplier</description>
    <label>Email sent to supplier ?</label>
    <type>Checkbox</type>
</CustomField>