force-app/main/default/objects/Vehicle__c/fields/Exclude_from_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>manually exclude vehicle from recalculation process</inlineHelpText>
    <label>Exclude from Recalculation</label>
    <type>Checkbox</type>
</CustomField>