force-app/main/default/objects/Vehicle__c/fields/Expected_Defleet_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Defleet_Date__c</fullName>
    <description>When is the car expected to be defleeted?</description>
    <inlineHelpText>When is the car expected to be defleeted?</inlineHelpText>
    <label>Expected Defleet Date</label>
    <type>Date</type>
</CustomField>