force-app/main/default/objects/Vehicle__c/fields/Expected_defleet_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Expected_defleet_timestamp__c</fullName>
    <label>Expected Defleet Date Timestamp</label>
    <type>Date</type>
</CustomField>