force-app/main/default/objects/Vehicle__c/fields/Final_tax_after_deduction__c.field-meta.xml
<CustomField>
    <fullName>Final_tax_after_deduction__c</fullName>
    <description>Endelig afgift efter fradrag</description>
    <label>Final tax after deduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>