force-app/main/default/objects/Vehicle__c/fields/Financing_request_sent__c.field-meta.xml
<CustomField>
    <fullName>Financing_request_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked when financing request has been sent to the leasing company (manually)</description>
    <inlineHelpText>checked when financing request has been sent to the leasing company</inlineHelpText>
    <label>Financing request sent</label>
    <type>Checkbox</type>
</CustomField>