force-app/main/default/objects/Vehicle__c/fields/First_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Registration_Date__c</fullName>
    <description>Date when the vehicle was first registered with Danish tax agency</description>
    <inlineHelpText>Date when the vehicle was first registered with Danish tax agency</inlineHelpText>
    <label>First Registration Date</label>
    <type>Date</type>
</CustomField>