force-app/main/default/objects/Vehicle__c/fields/For_sale_as_Minilease__c.field-meta.xml
<CustomField>
    <fullName>For_sale_as_Minilease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We would like to add a new field to the vehicle object.
“For sale as Minilease”
Danish translation = “Til salg som Minilease”
This should be a tick mark on the vehicle under additional information.
(SIX-333)</description>
    <label>For sale as Minilease</label>
    <type>Checkbox</type>
</CustomField>