force-app/main/default/objects/Vehicle__c/fields/Fuel_type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_type__c</fullName>
    <label>Fuel type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DI</fullName>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>EL</fullName>
                <label>Electric</label>
            </value>
            <value>
                <fullName>HBBP</fullName>
                <label>Hybrid Petrol</label>
            </value>
            <value>
                <fullName>HBD</fullName>
                <label>Hybrid Diesel</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Petrol</label>
            </value>
            <value>
                <fullName>HBB</fullName>
                <label>Hybrid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>