force-app/main/default/objects/Vehicle__c/fields/Full_tax_Monthly_cost__c.field-meta.xml
<CustomField>
    <fullName>Full_tax_Monthly_cost__c</fullName>
    <formula>Selected_Batch_Calculator__r.Full_tax_car_Cost_per_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full tax - Monthly cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>