force-app/main/default/objects/Vehicle__c/fields/Full_tax_Period_cost__c.field-meta.xml
<CustomField>
    <fullName>Full_tax_Period_cost__c</fullName>
    <formula>Selected_Batch_Calculator__r.Full_Tax_Car_Cost_for_period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full tax - Period cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>