force-app/main/default/objects/Vehicle__c/fields/handlingCost__c.field-meta.xml
<CustomField>
    <fullName>handlingCost__c</fullName>
    <label>Handling Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>