force-app/main/default/objects/Vehicle__c/fields/hasDamages__c.field-meta.xml
<CustomField>
    <fullName>hasDamages__c</fullName>
    <formula>IF( notFixedYetDamages__c &gt;0, true, false)</formula>
    <label>Has Damages</label>
    <type>Checkbox</type>
</CustomField>