force-app/main/default/objects/Vehicle__c/fields/Holding_Period__c.field-meta.xml
<CustomField>
    <fullName>Holding_Period__c</fullName>
    <description>Holding period, minimum period for how long we shall hold the vehicle. Initially populated from batch.</description>
    <inlineHelpText>Holding period, minimum period for how long we shall hold the vehicle. Initially populated from batch.</inlineHelpText>
    <label>Holding Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>