force-app/main/default/objects/Vehicle__c/fields/Holding_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Holding_Period_End_Date__c</fullName>
    <description>Actual infleet date + Holding period months</description>
    <formula>ADDMONTHS(Actual_Infleet_Day__c, Holding_Period__c)</formula>
    <inlineHelpText>Actual infleet date + Holding period months</inlineHelpText>
    <label>Holding Period End Date</label>
    <type>Date</type>
</CustomField>