force-app/main/default/objects/Vehicle__c/fields/holdingCost__c.field-meta.xml
<CustomField>
    <fullName>holdingCost__c</fullName>
    <label>Holding Cost</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>