force-app/main/default/objects/Vehicle__c/fields/Importer__c.field-meta.xml
<CustomField>
    <fullName>Importer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Importer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles (Importer)</relationshipLabel>
    <relationshipName>Vehicles3</relationshipName>
    <type>Lookup</type>
</CustomField>