force-app/main/default/objects/Vehicle__c/fields/Infleet_activities_finished__c.field-meta.xml
<CustomField>
    <fullName>Infleet_activities_finished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check whether Infleet activities for Vehicle has been finished</description>
    <label>Infleet activities finished?</label>
    <type>Checkbox</type>
</CustomField>