force-app/main/default/objects/Vehicle__c/fields/Infleet_Damage_check_completed__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Damage_check_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infleet Damage check completed</label>
    <type>Checkbox</type>
</CustomField>