force-app/main/default/objects/Vehicle__c/fields/Infleet_Damage_checked_by__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Damage_checked_by__c</fullName>
    <label>Infleet Damage checked by</label>
    <length>30</length>
    <type>Text</type>
</CustomField>