force-app/main/default/objects/Vehicle__c/fields/Infleet_Damage_checked_date__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Damage_checked_date__c</fullName>
    <label>Infleet Damage checked date</label>
    <type>Date</type>
</CustomField>