force-app/main/default/objects/Vehicle__c/fields/Infleet_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Pickup_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pickup location for Infleet</description>
    <inlineHelpText>Pickup location for Infleet</inlineHelpText>
    <label>Infleet Pickup Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pickup Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles (Infleet Pickup Location)</relationshipLabel>
    <relationshipName>InfleetPickupVehicles</relationshipName>
    <type>Lookup</type>
</CustomField>