force-app/main/default/objects/Vehicle__c/fields/Infleet_Pickup_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Pickup_Location_Name__c</fullName>
    <formula>Infleet_Pickup_Location__r.FirstName + &quot; &quot; +  Infleet_Pickup_Location__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infleet Pickup Location Name</label>
    <type>Text</type>
</CustomField>