force-app/main/default/objects/Vehicle__c/fields/Infleet_status__c.field-meta.xml
<CustomField>
    <fullName>Infleet_status__c</fullName>
    <label>Infleet status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm delivery</fullName>
            </value>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>IRK and Leasing Code</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Infleeted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>