force-app/main/default/objects/Vehicle__c/fields/Infleet_transportation_booked_date__c.field-meta.xml
<CustomField>
    <fullName>Infleet_transportation_booked_date__c</fullName>
    <label>Infleet transportation booked date</label>
    <type>Date</type>
</CustomField>