force-app/main/default/objects/Vehicle__c/fields/Integration_Requests_Number_Not_Run_Yet__c.field-meta.xml
<CustomField>
    <fullName>Integration_Requests_Number_Not_Run_Yet__c</fullName>
    <description>System rollup field that display number of Integration Request related to the vehicle and that have not been processed yet.</description>
    <inlineHelpText>System rollup field that display number of Integration Request related to the vehicle and that have not been processed yet.</inlineHelpText>
    <label>Integration Requests Number -Not Run Yet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>