force-app/main/default/objects/Vehicle__c/fields/Integration_Requests_Number_Success__c.field-meta.xml
<CustomField>
    <fullName>Integration_Requests_Number_Success__c</fullName>
    <description>System rollup field that display number of Integration Request related to the vehicle and processed successfully.</description>
    <inlineHelpText>System rollup field that display number of Integration Request related to the vehicle and processed successfully.</inlineHelpText>
    <label>Integration Requests Number - Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>