force-app/main/default/objects/Vehicle__c/fields/Integration_Requests_Number_Total__c.field-meta.xml
<CustomField>
    <fullName>Integration_Requests_Number_Total__c</fullName>
    <description>System rollup field that display total number of Integration Request related to the vehicle.</description>
    <formula>Integration_Requests_Number_Success__c +  Integration_Requests_Number_Failed__c +  Integration_Requests_Number_Not_Run_Yet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System rollup field that display total number of Integration Request related to the vehicle.</inlineHelpText>
    <label>Integration Requests Number - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>