force-app/main/default/objects/Vehicle__c/fields/Interest_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Interest_Leasing__c</fullName>
    <description>Interest part of the leasing cost per month</description>
    <inlineHelpText>Interest part of the leasing cost per month</inlineHelpText>
    <label>Interest (Leasing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>