force-app/main/default/objects/Vehicle__c/fields/Interest_Rate_Batch_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Batch_Calculator__c</fullName>
    <formula>Selected_Batch_Calculator__r.Intrest_rate_financing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest rate - Batch Calculator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>