force-app/main/default/objects/Vehicle__c/fields/Interest_Rate_First_Leasing_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_First_Leasing_Period__c</fullName>
    <description>&quot;Del rente - interest first period before first full month&quot;
=((end of mont-registration date)*leasing rate*total buy price)/360</description>
    <formula>/* calculate end of month = (ADDMONTHS(DATE(YEAR(Registration_Date__c), MONTH(Registration_Date__c), 1), 1) - 1) */
((ADDMONTHS(DATE(YEAR(Registration_Date__c), MONTH(Registration_Date__c), 1), 1) - 1) - Registration_Date__c )*(Total_Buy_Price__c * Leasing_Rate_Contract__c )/360</formula>
    <inlineHelpText>=((end of mont-registration date)*leasing rate*total buy price)/360</inlineHelpText>
    <label>Interest Rate First Leasing Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>