force-app/main/default/objects/Vehicle__c/fields/Internal_number__c.field-meta.xml
<CustomField>
    <fullName>Internal_number__c</fullName>
    <externalId>true</externalId>
    <label>Internal Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>