force-app/main/default/objects/Vehicle__c/fields/Internal_number_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Internal_number_timestamp__c</fullName>
    <label>Internal number timestamp</label>
    <type>Date</type>
</CustomField>