force-app/main/default/objects/Vehicle__c/fields/Invoice_Advis_requested__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Advis_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice/Advis requested</label>
    <type>Checkbox</type>
</CustomField>