force-app/main/default/objects/Vehicle__c/fields/Invoice_or_advis__c.field-meta.xml
<CustomField>
    <fullName>Invoice_or_advis__c</fullName>
    <description>Information about invoice or advis from the Buyer</description>
    <formula>TEXT(Buyer_Account__r.Invoice_or_advis__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Information about invoice or advis from the Buyer</inlineHelpText>
    <label>Invoice or advis</label>
    <type>Text</type>
</CustomField>