force-app/main/default/objects/Vehicle__c/fields/IRK_code__c.field-meta.xml
<CustomField>
    <fullName>IRK_code__c</fullName>
    <label>IRK code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>