force-app/main/default/objects/Vehicle__c/fields/Is_Car_Paid_by_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Car_Paid_by_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Car Paid by Buyer</label>
    <type>Checkbox</type>
</CustomField>