force-app/main/default/objects/Vehicle__c/fields/Is_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Is_Valuta__c</fullName>
    <formula>ISPICKVAL(Batch_Distribution__c, &quot;Valuta&quot;)</formula>
    <label>Is Valuta</label>
    <type>Checkbox</type>
</CustomField>