force-app/main/default/objects/Vehicle__c/fields/Key_label_printed__c.field-meta.xml
<CustomField>
    <fullName>Key_label_printed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key label printed</label>
    <type>Checkbox</type>
</CustomField>