force-app/main/default/objects/Vehicle__c/fields/Key_received_at_HQ__c.field-meta.xml
<CustomField>
    <fullName>Key_received_at_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the key received at the HQ?</description>
    <inlineHelpText>Is the key received at the HQ?</inlineHelpText>
    <label>Key received at HQ</label>
    <type>Checkbox</type>
</CustomField>