force-app/main/default/objects/Vehicle__c/fields/Key_received_at_HQ_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Key_received_at_HQ_Timestamp__c</fullName>
    <label>Key received at HQ Timestamp</label>
    <type>Date</type>
</CustomField>