force-app/main/default/objects/Vehicle__c/fields/Key_received_at_HQ_User__c.field-meta.xml
<CustomField>
    <fullName>Key_received_at_HQ_User__c</fullName>
    <label>Key received at HQ User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>