force-app/main/default/objects/Vehicle__c/fields/Key_received_at_station__c.field-meta.xml
<CustomField>
    <fullName>Key_received_at_station__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the key received at the station?</description>
    <inlineHelpText>Is the key received at the station?</inlineHelpText>
    <label>Key received at station</label>
    <type>Checkbox</type>
</CustomField>