force-app/main/default/objects/Vehicle__c/fields/Key_received_at_station_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Key_received_at_station_timestamp__c</fullName>
    <description>What time is the key received at the station?</description>
    <inlineHelpText>What time is the key received at the station?</inlineHelpText>
    <label>Key received at station timestamp</label>
    <type>Date</type>
</CustomField>