force-app/main/default/objects/Vehicle__c/fields/Key_sent_to_buyer__c.field-meta.xml
<CustomField>
    <fullName>Key_sent_to_buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the key sent to buyer?</description>
    <inlineHelpText>Is the key sent to buyer?</inlineHelpText>
    <label>Key sent to buyer</label>
    <type>Checkbox</type>
</CustomField>