force-app/main/default/objects/Vehicle__c/fields/Key_sent_to_buyer_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Key_sent_to_buyer_timestamp__c</fullName>
    <description>What time is the key sent to buyer?</description>
    <inlineHelpText>What time is the key sent to buyer?</inlineHelpText>
    <label>Key sent to buyer timestamp</label>
    <type>Date</type>
</CustomField>