force-app/main/default/objects/Vehicle__c/fields/Key_sent_to_buyer_User__c.field-meta.xml
<CustomField>
    <fullName>Key_sent_to_buyer_User__c</fullName>
    <label>Key sent to buyer User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>