force-app/main/default/objects/Vehicle__c/fields/Keys_and_documents_tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Keys_and_documents_tracking_ID__c</fullName>
    <label>Keys and documents tracking ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>