force-app/main/default/objects/Vehicle__c/fields/kmPrL__c.field-meta.xml
<CustomField>
    <fullName>kmPrL__c</fullName>
    <label>KM/L</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>