force-app/main/default/objects/Vehicle__c/fields/L94_Monthly_Cost__c.field-meta.xml
<CustomField>
    <fullName>L94_Monthly_Cost__c</fullName>
    <formula>Selected_Batch_Calculator__r.L94_Car_Monthly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L94 - Monthly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>