force-app/main/default/objects/Vehicle__c/fields/L94_Period_cost__c.field-meta.xml
<CustomField>
    <fullName>L94_Period_cost__c</fullName>
    <formula>Selected_Batch_Calculator__r.L94_Car_Cost_for_period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>L94 - Period cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>