force-app/main/default/objects/Vehicle__c/fields/Last_Afgiftspligt_Vaerdi__c.field-meta.xml
<CustomField>
    <fullName>Last_Afgiftspligt_Vaerdi__c</fullName>
    <label>Last Afgiftspligt_Vaerdi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>