force-app/main/default/objects/Vehicle__c/fields/Last_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculation_Date__c</fullName>
    <description>last date when the tax has been calculated</description>
    <inlineHelpText>last date when the tax has been calculated</inlineHelpText>
    <label>Last Calculation Date</label>
    <type>Date</type>
</CustomField>