force-app/main/default/objects/Vehicle__c/fields/Last_Vehicle_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Last_Vehicle_Inspection__c</fullName>
    <description>date of the last vehicle inspection</description>
    <inlineHelpText>date of the last vehicle inspection</inlineHelpText>
    <label>Last Vehicle Inspection</label>
    <type>Date</type>
</CustomField>