force-app/main/default/objects/Vehicle__c/fields/Latest_inregistration_date__c.field-meta.xml
<CustomField>
    <fullName>Latest_inregistration_date__c</fullName>
    <label>Latest inregistration date</label>
    <type>Date</type>
</CustomField>