force-app/main/default/objects/Vehicle__c/fields/leasing_Account__c.field-meta.xml
<CustomField>
    <fullName>leasing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leasing Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select leasing company</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leasing Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>VehiclesLeasing</relationshipName>
    <type>Lookup</type>
</CustomField>