force-app/main/default/objects/Vehicle__c/fields/Leasing_cancelled__c.field-meta.xml
<CustomField>
    <fullName>Leasing_cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leasing cancelled</label>
    <type>Checkbox</type>
</CustomField>