force-app/main/default/objects/Vehicle__c/fields/Leasing_code__c.field-meta.xml
<CustomField>
    <fullName>Leasing_code__c</fullName>
    <label>Leasing code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>