force-app/main/default/objects/Vehicle__c/fields/Leasing_Contact_Fee_Contract_L94__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Contact_Fee_Contract_L94__c</fullName>
    <description>leasing contract fee specified on the contract with Leasing Company</description>
    <inlineHelpText>leasing contract fee specified on the contract with Leasing Company</inlineHelpText>
    <label>Leasing Contact Fee - Contract (L94)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>