force-app/main/default/objects/Vehicle__c/fields/Leasing_contract_fee__c.field-meta.xml
<CustomField>
    <fullName>Leasing_contract_fee__c</fullName>
    <label>Leasing contract fee - current</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>