force-app/main/default/objects/Vehicle__c/fields/Leasing_contract_fee_calculated__c.field-meta.xml
<CustomField>
    <fullName>Leasing_contract_fee_calculated__c</fullName>
    <description>leasing contract fee used on selected vehicle calculator</description>
    <formula>Selected_Vehicle_Calculator__r.Contract_Fee_On_delivery__c</formula>
    <inlineHelpText>leasing contract fee used on selected vehicle calculator</inlineHelpText>
    <label>Leasing contract fee - calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>