force-app/main/default/objects/Vehicle__c/fields/Leasing_Contract_Fee_Contract__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Contract_Fee_Contract__c</fullName>
    <description>Leasing fee specified with the contract with Leasing Company</description>
    <formula>IF(ISPICKVAL(Batch_Distribution__c, &quot;Valutacar&quot;), 
			 Leasing_Contract_Fee_Contract_Valuta__c,
			 Leasing_Contact_Fee_Contract_L94__c 
)</formula>
    <inlineHelpText>Leasing fee specified with the contract with Leasing Company</inlineHelpText>
    <label>Leasing Contract Fee - Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>