force-app/main/default/objects/Vehicle__c/fields/Leasing_Contract_Fee_Contract_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Contract_Fee_Contract_Valuta__c</fullName>
    <description>Leasing contact fee specified on contract with Leasing Company - for Valuta vehicles</description>
    <inlineHelpText>Leasing contact fee specified on contract with Leasing Company - for Valuta vehicles</inlineHelpText>
    <label>Leasing Contract Fee - Contract (Valuta)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>