force-app/main/default/objects/Vehicle__c/fields/Leasing_Cost_1st_Month__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Cost_1st_Month__c</fullName>
    <description>Leasing Cost Per Month + Interest Rate First Leasing Period</description>
    <formula>Leasing_Cost_Per_Month__c + Interest_Rate_First_Leasing_Period__c</formula>
    <inlineHelpText>Leasing Cost Per Month + Interest Rate First Leasing Period</inlineHelpText>
    <label>Leasing Cost 1st Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>