force-app/main/default/objects/Vehicle__c/fields/Leasing_cost_actual__c.field-meta.xml
<CustomField>
    <fullName>Leasing_cost_actual__c</fullName>
    <description>monthly payment to leasing company, information received from the leasing company</description>
    <inlineHelpText>monthly payment to leasing company, information received from the leasing company</inlineHelpText>
    <label>Leasing cost - actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>