force-app/main/default/objects/Vehicle__c/fields/Leasing_Cost_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Cost_Per_Month__c</fullName>
    <description>leasing cost per regular (2nd-Nth) month,
calculated in Apex based on Leasing Company algorithm</description>
    <inlineHelpText>leasing cost per regular (2nd-Nth) month</inlineHelpText>
    <label>Leasing Cost Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>