force-app/main/default/objects/Vehicle__c/fields/Leasing_cost_per_month_calculated__c.field-meta.xml
<CustomField>
    <fullName>Leasing_cost_per_month_calculated__c</fullName>
    <description>leasing cost per month calculate on vehicle calculator</description>
    <formula>Selected_Vehicle_Calculator__r.Leasing_Fee_calculated__c</formula>
    <inlineHelpText>leasing cost per month calculate on vehicle calculator</inlineHelpText>
    <label>Leasing cost per month - calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>