force-app/main/default/objects/Vehicle__c/fields/Leasing_cost_per_period_actual__c.field-meta.xml
<CustomField>
    <fullName>Leasing_cost_per_period_actual__c</fullName>
    <description>Actual leasing cost for the whole holding period received from leasing company for this vehicle</description>
    <inlineHelpText>Actual leasing cost for the whole holding period received from leasing company for this vehicle</inlineHelpText>
    <label>Leasing cost per period - actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>