force-app/main/default/objects/Vehicle__c/fields/Leasing_cost_per_period_calculated__c.field-meta.xml
<CustomField>
    <fullName>Leasing_cost_per_period_calculated__c</fullName>
    <description>leasing cost calculated for the whole holding period (holding period * leasing cost per month)</description>
    <formula>Holding_Period__c *  Leasing_cost_per_month_calculated__c</formula>
    <inlineHelpText>leasing cost calculated for the whole holding period (holding period * leasing cost per month)</inlineHelpText>
    <label>Leasing cost per period - calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>