force-app/main/default/objects/Vehicle__c/fields/Leasing_Period__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Period__c</fullName>
    <description>vehicle Leasing Period, from vehicle calculator</description>
    <formula>Selected_Vehicle_Calculator__r.Period__c</formula>
    <inlineHelpText>vehicle Leasing Period, from vehicle calculator</inlineHelpText>
    <label>Leasing Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>