force-app/main/default/objects/Vehicle__c/fields/Leasing_Period_for_recalculation__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Period_for_recalculation__c</fullName>
    <formula>/*IF( Today() -  Registration_Date__c  &lt; 30 , 1, */
IF( TODAY() &lt; ADDMONTHS(Registration_Date__c, 1), 1, 

IF( (Today() -  Registration_Date__c &gt; 30 &amp;&amp; Today() -  Registration_Date__c &lt; 60) , 2, 

IF(( Today() -  Registration_Date__c &gt; 60 &amp;&amp; Today() -  Registration_Date__c &lt; 90) , 3 ,

NULL )

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leasing Period(for recalculation)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>