force-app/main/default/objects/Vehicle__c/fields/leasing_rate_actual__c.field-meta.xml
<CustomField>
    <fullName>leasing_rate_actual__c</fullName>
    <label>Leasing rate - current</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>