force-app/main/default/objects/Vehicle__c/fields/Leasing_rate_calculated__c.field-meta.xml
<CustomField>
    <fullName>Leasing_rate_calculated__c</fullName>
    <description>leasing rate used on selected vehicle calculator</description>
    <formula>Selected_Vehicle_Calculator__r.Interest_Rate__c</formula>
    <inlineHelpText>leasing rate used on selected vehicle calculator</inlineHelpText>
    <label>Leasing rate - calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>