force-app/main/default/objects/Vehicle__c/fields/Leasing_Rate_Contract__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Rate_Contract__c</fullName>
    <description>Leasing interest rate specified with the contract with the Leasing Company</description>
    <formula>IF(ISPICKVAL(Batch_Distribution__c, &quot;Valutacar&quot;),
			 Leasing_Rate_Contract_Valuta__c,
			 Leasing_Rate_Contract_L94__c
)</formula>
    <inlineHelpText>Leasing interest rate specified with the contract with the Leasing Company</inlineHelpText>
    <label>Leasing Rate - Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>