force-app/main/default/objects/Vehicle__c/fields/Leasing_Rate_Contract_L94__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Rate_Contract_L94__c</fullName>
    <description>leasing rate specified on the Leasing Company contract at the moment when Leasing Company is set on the vehicle</description>
    <inlineHelpText>leasing rate specified on the Leasing Company</inlineHelpText>
    <label>Leasing Rate - Contract (L94)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>