force-app/main/default/objects/Vehicle__c/fields/Leasing_Rate_Contract_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Rate_Contract_Valuta__c</fullName>
    <description>leasing rate specified on the Leasing Company contract at the moment when Leasing Company is set on the vehicle, value for Valuta cars (if not specified on the account the same value as L94 is used)</description>
    <inlineHelpText>leasing rate specified on the Leasing Company contract (for Valuta)</inlineHelpText>
    <label>Leasing Rate - Contract (Valuta)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>