force-app/main/default/objects/Vehicle__c/fields/Leasing_Type__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Type__c</fullName>
    <description>if buyer is “SIXT” then it is Finance leasing, otherwise it is Operating leasing
sets automatically</description>
    <inlineHelpText>if buyer is “SIXT” then it is Finance leasing, otherwise it is Operating leasing</inlineHelpText>
    <label>Leasing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Operating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>