force-app/main/default/objects/Vehicle__c/fields/Legal_Recalculation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Legal_Recalculation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>checked when we have already asked Leasing Partner to do the recalculation</inlineHelpText>
    <label>Legal Recalculation Requested</label>
    <type>Checkbox</type>
</CustomField>